--- a/myjokeactivity/src/main/AndroidManifest.xml
+++ b/myjokeactivity/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.havistudio.myjokeactivity">
 
@@ -5,13 +6,10 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".JokeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".MyJokeActivity"
+            android:label="@string/title_activity_my_joke"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
